Multipart, cables, and pipes
Still working on the rendering for cables and there are some bugs with
the multipart code

--- a/src/main/resources/assets/extrastuff/lang/en_US.lang
+++ b/src/main/resources/assets/extrastuff/lang/en_US.lang
@@ -1,2 +1,2 @@
-tile.titaniumBlock.name=Titanium Block
-item.titaniumIngot.name=Titanium Ingot
+tile.extrastuff.titaniumBlock.name=Titanium Block
+item.extrastuff.titaniumIngot.name=Titanium Ingot
